# lookpoint_firmware

./: .gitignore  Cargo.lock.license  Cargo.toml  Embed.toml  README.md  memory.x  notes.md  rust-toolchain.toml  rustfmt.toml  taplo.toml
.cargo/: config.toml
nRF52840/: Documentation_Links.md  s113_nrf52_7.3.0_softdevice.hex.license  s113_nrf52_7.3.0_softdevice.hex.sha256
src/: ble.rs  ble_controller.rs  bluetooth.rs  boards.rs  main.rs  service_layer.rs
src/ble/: advertise.rs  battery_service.rs  controller.rs  gatt_server.rs  services.rs
src/ble/services/: device_information.rs
src/bluetooth/: advertiser.rs  bluetooth_device.rs  device_name.rs  server.rs
src/boards/: nano_33_ble.rs
src/boards/nano_33_ble/: mpsl.rs  rng_driver.rs  sdc.rs
