# SPDX-FileCopyrightText: 2024 Derek Sauer
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "lookpoint_firmware"
version = "0.1.0"
authors = ["Derek Sauer <dereksauer.ca@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "Firmware for the Lookpoint head tracking device"
documentation = "https://github.com/dereksauer/lookpoint-firmware"
readme = "README.md"
repository = "https://github.com/dereksauer/lookpoint-firmware"
license = "GPL-3.0-only"

[[bin]]
name = "lookpoint_firmware"
harness = false

[dependencies]
embassy-executor = { version = "0.9", default-features = false, features = ["arch-cortex-m", "defmt", "executor-interrupt", "executor-thread", "nightly"] }
embassy-futures = { version = "0.1.1", default-features = false, features = ["defmt"] }
embassy-nrf = { version = "0.6", default-features = false, features = ["defmt", "gpiote", "nrf52840", "rt", "time-driver-rtc1"] }
embassy-time = { version = "0.5", default-features = false, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.7.2", default-features = false, features = ["defmt"] }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7.5", features = ["device"] }

bt-hci = { version = "0.4.0", default-features = false, features = ["defmt"] }
nrf-sdc = { version = "0.2.0", default-features = false, features = ["defmt", "nrf52840", "peripheral"] }
nrf-mpsl = { version = "0.2.0", default-features = false, features = ["critical-section-impl", "defmt", "nrf52840"] }
trouble-host = { version = "0.2.4", default-features = false, features = ["default-packet-pool", "default-packet-pool-mtu-255", "defmt", "derive", "gatt", "peripheral"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

static_cell = "2.1.0"
rand_core = "0.9"
rand_chacha = { version = "0.9", default-features = false }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "s"
overflow-checks = false
panic = "abort"

[profile.dev]
opt-level = "s"
