# SPDX-FileCopyrightText: 2024 Derek Sauer
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "lookpoint_firmware"
version = "0.1.0"
authors = ["Derek Sauer <dereksauer.ca@gmail.com>"]
edition = "2024"
rust-version = "1.89"
description = "Firmware for the Lookpoint head tracking device"
documentation = "https://github.com/dereksauer/lookpoint-firmware"
readme = "README.md"
repository = "https://github.com/dereksauer/lookpoint-firmware"
license = "GPL-3.0-only"

[[bin]]
name = "lookpoint_firmware"
harness = false

[dependencies]
# Cross platform crates.
bt-hci = { version = "0.4.0", features = ["defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
rand_core = "0.9.3"
rand_chacha = { version = "0.9.0", default-features = false }
static_cell = "2.1.1"
trouble-host = { version = "0.2.4", features = ["default-packet-pool", "defmt", "derive", "gatt", "peripheral", "security"] }

# Crates specific to Cortex-M processors.
cortex-m = { version = "0.7.7", features = ["inline-asm"], optional = true }
cortex-m-rt = { version = "0.7.5", features = ["device"], optional = true }

# Crates specific to NRF chips.
embassy-nrf = { version = "0.7", features = ["defmt", "gpiote", "rt", "time-driver-rtc1"], optional = true }
nrf-sdc = { version = "0.3.0", features = ["defmt", "peripheral"], optional = true }
nrf-mpsl = { version = "0.3.0", features = ["critical-section-impl", "defmt"], optional = true }

[features]
default = ["nano_33_ble"]

# Enabled for the Arduino Nano 33 BLE.
nano_33_ble = ["nrf", "nrf52840"]

# Enabled for all NRF platform.
nrf = [
    "dep:cortex-m",
    "dep:cortex-m-rt",
    "dep:embassy-nrf",
    "dep:nrf-sdc",
    "dep:nrf-mpsl",
    "dep:panic-probe",
    "embassy-executor/arch-cortex-m",
    "embassy-executor/executor-interrupt",
    "embassy-executor/executor-thread",
]

# NRF 52840 chip.
nrf52840 = ["embassy-nrf?/nrf52840", "nrf-sdc?/nrf52840", "nrf-mpsl?/nrf52840"]

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "s"
overflow-checks = false
panic = "abort"

[profile.dev]
opt-level = "s"
